[SRTP-414]: Revert some modification and add an handler for already exist error
