# src/main/java/it/gov/pagopa/rtp/activator/controller/activation/ActivationAPIControllerImpl.java
@@ -5,7 +5,6 @@ import static it.gov.pagopa.rtp.activator.utils.Authorizations.verifySubjectRequ
 import it.gov.pagopa.rtp.activator.configuration.ActivationPropertiesConfig;
 import it.gov.pagopa.rtp.activator.controller.generated.activate.CreateApi;
 import it.gov.pagopa.rtp.activator.controller.generated.activate.ReadApi;
-import it.gov.pagopa.rtp.activator.domain.errors.PayerAlreadyExists;
 import it.gov.pagopa.rtp.activator.model.generated.activate.ActivationDto;
 import it.gov.pagopa.rtp.activator.model.generated.activate.ActivationReqDto;
 import it.gov.pagopa.rtp.activator.model.generated.activate.PageOfActivationsDto;
@@ -50,12 +49,13 @@ public class ActivationAPIControllerImpl implements CreateApi, ReadApi {
       ServerWebExchange exchange) {
     log.info("Received request to activate a payer");
     return verifySubjectRequest(activationReqDto, it -> it.getPayer().getRtpSpId())
-        .flatMap(t -> activationPayerService.activatePayer(t.getPayer().getRtpSpId(),
-            t.getPayer().getFiscalCode(), activationPropertiesConfig.baseUrl()))
+        .flatMap(t -> activationPayerService.activatePayer(t.getPayer().getRtpSpId().toString(),
+            t.getPayer().getFiscalCode()))
         .<ResponseEntity<Void>>map(payer -> ResponseEntity
             .created(URI.create(activationPropertiesConfig.baseUrl()
                 + payer.activationID().getId().toString()))
             .build())
+        //.onErrorReturn(PayerAlreadyExists.class, ResponseEntity.status(409).build())
         .doOnError(a -> log.error("Error activating payer {}", a.getMessage()));
   }
 
@@ -76,8 +76,9 @@ public class ActivationAPIControllerImpl implements CreateApi, ReadApi {
 
   @Override
   @PreAuthorize("hasRole('read_rtp_activations')")
-  public Mono<ResponseEntity<ActivationDto>> getActivation(UUID requestId, UUID activationId,
+  public Mono<ResponseEntity<ActivationDto>> getActivation( UUID requestId, UUID activationId,
       String version, ServerWebExchange exchange) {
+    // TODO Auto-generated method stub
     throw new UnsupportedOperationException("Unimplemented method 'getActivation'");
   }
 
